# osm-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: codecov_workflow.yml  test.yml
src/osm_api/: __init__.py  api.py  core.py  parser.py
src/osm_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/osmapi/: __init__.py  core.py
src/osmapi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/osmapi_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py
