[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osmapi"
version = "0.0.1"
authors = [
  { name="Mohammad Hossein Zendehpey", email="m.h.Zendehpey@gmail.com" },
]
description = "A small package to get data from OSM API directly"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mhzendehpey/osmapi"
"Bug Tracker" = "https://github.com/mhzendehpey/osmapi/issues"