[build-system]
requires = ["setuptools>=61.0", "requests>=2.27.1", "shapely>=1.8.2", ]
build-backend = "setuptools.build_meta"

[project]
name = "osmapi_wrapper"
version = "1.0.2"
authors = [
  { name="Mohammad Hossein Zendehpey", email="m.h.Zendehpey@gmail.com" },
]
description = "A small package to get data from OSM API directly"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.27.1",
  "shapely>=1.8.2",
]

[project.urls]
"Homepage" = "https://github.com/mhzendehpey/osm-api"
"Bug Tracker" = "https://github.com/mhzendehpey/osm-api/issues"